--- a/customer_lifetime_value/CLV_Lifetimes_Example.ipynb
+++ b/customer_lifetime_value/CLV_Lifetimes_Example.ipynb
@@ -3463,6 +3463,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -3478,7 +3479,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
